--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" \
             -d "chat_id=${{ secrets.GROUP_ID }}" \
-            -d "text=✅ Деплой успешно завершен!%0AСервер: ${{ secrets.SERVER_HOST }}%0AКоммит: ${{ github.sha }}" \
+            -d "text=✅ Деплой успешно завершен!" \
             -d "parse_mode=HTML"
 
       - name: Notify on Failure
